[package]
name = "jwks-rs"
version = "0.2.1"
edition = "2021"

[dependencies]
base64 = "0.22"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.7.0-rc.1"
serde_json = "1.0.111"
